<resources>
    <string name="app_name">crash</string>
    <string name="Ok" translatable="false">OK</string>
    <string name="hello">Hello!</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="paswword" translatable="false">Password</string>
    <string name="name1" translatable="false">Имя</string>
    <string name="name2" translatable="false">Фамилия</string>
    <string name="name3" translatable="false">Отчество</string>
    <string name="done" translatable="false">Готово</string>
    <string name="Hint_0" translatable="false">Выберите фигуру,которая вам не понадобиться из пулла</string>
    <string name="Hint_1" translatable="false">Привет.Впереди обучение механикам игры.</string>
    <string name="Hint_2" translatable="false">Перетащи фигуру на поле</string>
    <string name="Hint_3" translatable="false">Чтобы перевернуть фигуру нажми на нее</string>
    <string name="Hint_4" translatable="false">Фигуру можно положить в рюкзак.</string>
    <string name="Hint_5" translatable="false">Фигуру можно удалить.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_text_sigin">Привет, игрок!</string>
    <string name="dop_info_sigin">Чтобы сохранять накопленный опыт нужно войти в аккаунт.</string>
    <string name="remember">Запомнить меня</string>
    <string name="input_sig_in_up">Ввести</string>
    <string name="btn_sig_in_up">Войти</string>
    <string name="Forgot_password">Забыли пароль?</string>
    <string name="login_sig_in">Логин</string>
    <string name="password_sigin">Пароль</string>
    <string name="Email_sigin">Почта</string>
    <string name="No_acc_sigin">Нет аккаунта?</string>
    <string name="reg_click_sigin">Зарегистрироваться</string>
    <string name="button_Play">Играть</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>